--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
-HELP.md
 target/
-.mvn/wrapper/maven-wrapper.jar
+!.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
 
@@ -31,3 +30,10 @@ build/
 
 ### VS Code ###
 .vscode/
+
+.DS_Store
+src/main/resources/application-dev.yml
+src/main/resources/application-prod.yml
+.env
+src/main/resources/static
+src/main/resources/data.sql
