--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -50,4 +50,4 @@ jobs:
             docker rm survey-server || true
             docker rmi $(docker images ${{ secrets.DOCKER_REPO }} -q) || true
             docker pull ${{ secrets.DOCKER_REPO }}
-            docker run -d --network docker-network -p 8080 --name survey-server ${{ secrets.DOCKER_REPO }}
+            docker run -d -p 8080 --name survey-server ${{ secrets.DOCKER_REPO }}
