--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,10 @@ spring.datasource.url=jdbc:mysql://localhost:3306/survey_db?serverTimezone=Asia/
 spring.datasource.username=root
 spring.datasource.password=12341234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+
+
+#spring.datasource.url=jdbc:mysql://mysql:3306/survey_db?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
